--- a/src/css/ventajas.css
+++ b/src/css/ventajas.css
@@ -7,8 +7,8 @@
     justify-content: center;
 
     background-image: linear-gradient(
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.7)
         ),url('../img/img_ventajas.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -157,31 +157,46 @@
     .ventajas_container{
         width: 90%;
     }
-
 }
 
 @media screen and (max-width: 600px ){
     .ventajas{
-        height: 3100px;
+        height: auto;
+        overflow-x: hidden;
     }
         .ventajas_container{
-            height: 2900px;
-        }
+            width: 90%;
+            height: auto;
+            margin-top: 60px;
+            margin-bottom: 60px;
+        }   
+            .ventajas_cards{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-wrap: none;
+                gap: none;
+            }
                 .cardv{
                     width: 100%;
-                    height: 220px;
+                    height: auto;
                 }
 
                     .cardv_icono{
-                        height: 100px;
+                        width: auto;
+                        height: auto;
+                        margin-bottom: 10px;
                     }
-
                         .cardv_icono_circle{
-                            width: 70px;
-                            height:70px;
-                            line-height: 70px;
+                           margin-top: 20px;
                         }
 
+                        .cardv_text{
+                            width: auto;
+                            height: auto;
+                            margin-bottom: 20px;
+                        }
                             .cardv_text h3, p{
                               font-size: 15px;
                             }
