--- a/src/css/ventajas.css
+++ b/src/css/ventajas.css
@@ -1,5 +1,4 @@
 
-
 .ventajas{
     height: 800px;
     display: flex;
@@ -18,7 +17,7 @@
 }
 
     .ventajas_container{
-        height: 670px;
+        height: 640px;
         width: 100%;
         margin-left: 140px;
         margin-right: 140px;
@@ -55,23 +54,22 @@
                 border-radius: 12px;
                 box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 10%);
             }
-
                 .cardv:hover{
                     border: 1px solid #0e2b3d;
                 }
 
-
                 .cardv_center{
                     margin-left: 15px;
                     margin-right: 15px;
+                    width: 100%;
                 }
 
                     .cardv_icono{
+                        width: 100%;
                         height: 80px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        
                     }
 
                         .cardv_icono_circle{
@@ -84,10 +82,10 @@
                             border: 2px solid white;
                         }
 
-
                     .cardv_text{
                         text-align: center;
                         height: 80px;
+                        width: 100%;
                     }
 
                         .cardv_text h3{
@@ -96,7 +94,6 @@
                             color: #0e2b3d;
                             font-weight: 700;
                             margin-bottom: 8px;
-                            
                         }
 
                         .cardv_text p{
@@ -107,98 +104,57 @@
 
 /* Seccion Ventajas responsive */
 @media screen and (max-width: 1200px ){
-    .ventajas{
-        height: 1050px;
-    }
-        .ventajas_container{
-            height: 850px;
-        }
-            .ventajas_cards{
-                gap: 16px;
-            }
-
-                .cardv{
-                    width: 32%;   
-                }
-
+    .cardv{ width: 23.9%; }
 }
 
-@media screen and (max-width: 1090px ){
-    .ventajas{
-        height: 1500px; 
-    }
-        .ventajas_container{
-            height: 1300px;
-        }
-
-                .cardv{
-                    width: 48.777%;   
-                }
-
+@media screen and (max-width: 1110px ){
+    .ventajas{ height: auto; overflow-x: hidden; }
+        .ventajas_container{ height: auto; margin-top: 65px; margin-bottom: 65px;}
+            .ventajas_cards{ gap: 26px;}
+                .cardv{ width: 31%; }
 }
 
-@media screen and (max-width: 1000px ){
-    .ventajas_container{
-        width: 80%;
-        margin-left: 0px;
-        margin-right: 0px;
-    }
+@media screen and (max-width: 1030px ){
+    .ventajas_container{ width: 80%; margin-left: 0px; margin-right: 0px; }
 }
 
-@media screen and (max-width: 850px ){
-    .cardv{
-        width: 48.444%;   
-    }
-
+@media screen and (max-width: 930px ){
+    .ventajas_cards{ gap: 22px; }
 }
 
+@media screen and (max-width: 800px ){
+    .ventajas_cards{ gap: 20px; }
+}
 
-@media screen and (max-width: 670px ){
-    .ventajas_container{
-        width: 90%;
-    }
+@media screen and (max-width: 720px){
+    .ventajas_cards{ display: flex; align-items: center; justify-content: center; }
+        .cardv{ width: 40%; }
 }
 
 @media screen and (max-width: 600px ){
-    .ventajas{
-        height: auto;
-        overflow-x: hidden;
-    }
-        .ventajas_container{
-            width: 90%;
-            height: auto;
-            margin-top: 60px;
-            margin-bottom: 60px;
-        }   
-            .ventajas_cards{
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-wrap: none;
-                gap: none;
-            }
-                .cardv{
-                    width: 100%;
-                    height: auto;
-                }
-
-                    .cardv_icono{
-                        width: auto;
-                        height: auto;
-                        margin-bottom: 10px;
-                    }
-                        .cardv_icono_circle{
-                           margin-top: 20px;
-                        }
-
-                        .cardv_text{
-                            width: auto;
-                            height: auto;
-                            margin-bottom: 20px;
-                        }
-                            .cardv_text h3, p{
-                              font-size: 15px;
-                            }
-
+    .cardv{ width: 47%; }
 }
+
+@media screen and (max-width: 480px ){
+    .ventajas_container{ width: 90%; }   
+}
+
+@media screen and (max-width: 400px ){
+    .ventajas_container{ width: 100%; }
+        .ventajas_cards{ width: 100%; flex-wrap: none; }
+            .cardv{ width: 60%; height: auto; }
+                .cardv_icono{ height: auto; }
+                    .cardv_icono_circle{ margin-top: 10px; margin-bottom: 10px; }
+                .cardv_text{ height: auto; margin-bottom: 15px; }
+                    .cardv_text h3, p{ font-size: 15px; }
+}
+
+@media screen and (max-width: 350px ){
+    .ventajas_container{ width: 70%; }
+        .cardv{ width: 100%;}
+}
+
+@media screen and (max-width: 250px ){
+    .ventajas_container{ width: 90%; }
+}
+
