--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -203,7 +203,6 @@
           text-align: center;
         }
 
-
     .slider_container_right{
       width: 100%;
       height: 350px;
@@ -218,18 +217,14 @@
         float: none;
         margin-top: 0px;
       }
-        .form-circle{
-          border-radius: 30px;
-        }
     
 }
 
 
 @media screen and (max-width: 800px ){
-.slider_text, .slider_form{
-  width: 70%;
-}
-      
+  .slider_text, .slider_form{
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 700px ){
@@ -240,22 +235,29 @@
 }
 
 @media screen and (max-width: 550px ){
-  .slider_text, .slider_form{
+  .slider_form{
     width: 90%;
-  }
-          
+  }     
 }
 
 /* Para pantallas mas chicas */
 @media screen and (max-width: 450px ){
+.slider{
+  overflow-x: hidden;
+}
 .slider, .slider_container{
-  height: 820px;
+  height: auto;
 }
   .slider_container_left{
-    height: 300px;
+    height: auto;
   }
+    .slider_text{
+      margin-top: 40px;
+      margin-bottom: 30px;
+    }
   .slider_container_right{
-    height: 450px;
+    height: auto;
+    margin-bottom: 40px;
   }
 
 }
