--- a/src/css/wsp.css
+++ b/src/css/wsp.css
@@ -1,20 +1,13 @@
-.btn-wsp{
-    position:fixed;
-    width:60px;
-    height:60px;
-    line-height: 63px;
-    bottom:25px;
-    right:25px;
-    background:#25d366;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    font-size:35px;
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
-    z-index:100;
-    transition: all 300ms ease;
-}
-.btn-wsp:hover{
-    background: #20ba5a;
+
+._34Oew {
+    font-size: 12px;
 }
 
+._34Oew ._1jTF6._3sodH {
+    width: 220px;
+    bottom: 70px;
+}
+
+._34Oew ._22mst textarea:focus {
+    outline: 0.3px solid #ccc;
+}
