--- a/src/css/slidernav.css
+++ b/src/css/slidernav.css
@@ -10,6 +10,7 @@
     background-attachment: fixed;
     position: relative;
     padding: 80px 0;
+    margin-top: 130px;
 }
 
     .sliderNav_text{
@@ -25,3 +26,10 @@
             overflow-wrap: break-word;
             color: #fff;
         }
+
+/* SliderNav responsive */
+@media screen and (max-width: 1100px ){
+    .sliderNav{
+        margin-top: 90px;
+    }
+}
