--- a/src/css/ventajas.css
+++ b/src/css/ventajas.css
@@ -42,6 +42,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 12px;
+            
         }
 
             .cardv{
@@ -53,6 +54,7 @@
                 justify-content: center;
                 border-radius: 12px;
                 box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 10%);
+                transition: all 5s;
             }
                 .cardv:hover{
                     border: 1px solid #0e2b3d;
