--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -9,7 +9,6 @@
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
-  margin-top: 130px;
 }
 
   .slider_container{
@@ -181,10 +180,10 @@
 
 /* Slider responsive */
 @media screen and (max-width: 1100px ){
-  .slider{
-    margin-top: 90px;
-  }
+  .slider{ margin-top: 90px;}
 }
+
+
 @media screen and (max-width: 1070px ){
 .slider{
   display: flex;
