--- a/src/css/slidernav.css
+++ b/src/css/slidernav.css
@@ -10,7 +10,6 @@
     background-attachment: fixed;
     position: relative;
     padding: 80px 0;
-    margin-top: 130px;
 }
 
     .sliderNav_text{
@@ -27,9 +26,7 @@
             color: #fff;
         }
 
-/* SliderNav responsive */
+
 @media screen and (max-width: 1100px ){
-    .sliderNav{
-        margin-top: 90px;
-    }
+    .sliderNav{ margin-top: 90px;}
 }
