--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,183 +1,188 @@
-body.active-menum{
-  overflow-y: hidden;
-}
-
+body.active-menum{ overflow-y: hidden; }
 
 .head{
   width: 100%;
   top: 0;
 }
 
-/*header superior*/
-.head-superior {
-  width: 100%;
-  height: 40px;
-  background-color: var(--color-negro-logo);
-  position: relative;
-}
-
-  .container-left{
-    text-align: left;
-    float: left;
-    width: 40%;
+/* Header superior */
+  .head-superior {
+    width: 100%;
     height: 40px;
-    left: 140px;
-    position: absolute;
+    background-color: var(--color-negro-logo);
+    position: relative;
   }
 
-    .container-left ul{
+    .container-left{
+      text-align: left;
+      float: left;
+      width: 40%;
+      height: 40px;
+      left: 140px;
+      position: absolute;
+    }
+
+      .container-left ul{
+        list-style: none;
+      }
+
+        .container-left li{
+          display: inline-block;
+          box-sizing: border-box;
+          text-decoration: none;
+          color: var(--color-blanco-primary);
+          padding-right: 20px;
+          padding: 15px;
+          padding-left: 8px;
+          font-weight: 600;
+          font-size: 11px;
+        }
+
+        .container-left li i{
+          font-weight: 600;
+        }
+
+    .container-right{
+      text-align: right;
+      float: right;
+      width: 40%;
+      height: 40px;
+      right: 140px;
+      position: absolute;
+    }
+
+    .container-right ul{
       list-style: none;
     }
 
-      .container-left li{
+      .headersup_horario{
         display: inline-block;
         box-sizing: border-box;
         text-decoration: none;
         color: var(--color-blanco-primary);
-        padding-right: 20px;
+        padding-left: 20px;
         padding: 15px;
-        padding-left: 8px;
         font-weight: 600;
         font-size: 11px;
       }
+        .headersup_horario i{
+          font-weight: 600;
+        }
 
-      .container-left li i{
-        font-weight: 600;
-      }
-
-  .container-right{
-    text-align: right;
-    float: right;
-    width: 40%;
-    height: 40px;
-    right: 140px;
-    position: absolute;
-}
-
-  .container-right ul{
-    list-style: none;
-  }
-
-    .headersup_horario{
-      display: inline-block;
-      box-sizing: border-box;
-      text-decoration: none;
-      color: var(--color-blanco-primary);
-      padding-left: 20px;
-      padding: 15px;
-      font-weight: 600;
-      font-size: 11px;
-    }
-      .headersup_horario i{
-        font-weight: 600;
-      }
-
-    .headersup_social{
-      display: inline-block;
-      box-sizing: border-box;
-      text-decoration: none;
-      color: var(--color-blanco-primary);
-      margin-left: 15px;
-    }
-    
-      .icon--facebook, .icon--instagram, .icon--twitter{
-        overflow-wrap: break-word;
-        list-style-type: none;
-        font-weight: 600;
-        color: var(--color-blanco-primary);
-        font-size: 18px;
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-        -webkit-font-smoothing: antialiased;
+      .headersup_social{
         display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        text-rendering: auto;
-        line-height: 1;
-        font-family: "font awesome 5 brands";
+        box-sizing: border-box;
+        text-decoration: none;
+        color: var(--color-blanco-primary);
+        margin-left: 15px;
       }
       
+        .icon--facebook, .icon--instagram, .icon--twitter{
+          overflow-wrap: break-word;
+          list-style-type: none;
+          font-weight: 600;
+          color: var(--color-blanco-primary);
+          font-size: 18px;
+          box-sizing: border-box;
+          padding: 0;
+          margin: 0;
+          -webkit-font-smoothing: antialiased;
+          display: inline-block;
+          font-style: normal;
+          font-variant: normal;
+          text-rendering: auto;
+          line-height: 1;
+          font-family: "font awesome 5 brands";
+        }
 
-/*Header inferior*/
-header {
-  width: 100%;
-  height: 90px;
-  background-color: var(--color-rojo-logo); 
-}
-  
-  header #logo{
-    float: left;
+
+/* Header inferior */
+  header {
+    width: 100%;
     height: 90px;
-    margin-left: 140px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: var(--color-rojo-logo); 
   }
-
-    header #logo img{
-      height: 85px;
-      padding: 10px;
-      padding-left: 0px;
+    
+    header #logo{
+      float: left;
+      height: 90px;
+      margin-left: 140px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
+      header #logo img{
+        height: 85px;
+        padding: 10px;
+        padding-left: 0px;
+      }
 
-  nav {
-    float: right;
-    padding: 25px 20px 0px 0px;
-    padding: 25px;
-    margin-right: 105px;
-    height: 90px;
-  }
-  
-  .menu-icon {
-    display: none;
-    font-size: 30px;
-    cursor: pointer;
-    margin-top: 5px;
-  }
-  
-  .menu-list {
-    list-style: none;
-  }
-  
-  nav ul li {
-    font-size: 80%;
-    display: inline-block;
-    padding: 10px;
-    padding-top: 15px;
-    box-sizing: border-box;
-  }
-  
-  nav ul li #btningresar{
-    cursor: pointer;
-    animation-delay: .7s;
-    padding: 15px 15px;
-    border-radius: 30px;
-    background: var(--color-amarillo-primary); 
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: var(--color-blanco-primary);
-    font-weight: bold;
-    padding-left: 10px;
-    cursor: pointer;
-  }
-  
-  
-    a:hover {
-      color: #a5bdcd;
+
+    nav {
+      float: right;
+      padding: 25px 20px 0px 0px;
+      padding: 25px;
+      margin-right: 105px;
+      height: 90px;
     }
+    
+      .menu-icon {
+        display: none;
+        font-size: 30px;
+        color: var(--color-blanco-primary);
+        cursor: pointer;
+        margin-top: 5px;
+      }
+      
+      .menu-list {
+        list-style: none;
+        display: block;
+      }
 
+      .menu-list.close{
+        right: -100%;
+      }
+      
+        nav ul li {
+          font-size: 80%;
+          display: inline-block;
+          padding: 10px;
+          padding-top: 15px;
+          box-sizing: border-box;
+          margin-left: 10px;
+        }
 
+        nav ul li .active{
+          color: #ffdd40;
+          width: 100%;
+          height: 22px;
+          content: "";
+          display: block;
+          border-bottom: 1px solid #ffdd40;
+        }
+        
+          nav ul li #btnSolicitar{
+            cursor: pointer;
+            padding: 15px 15px;
+            border-radius: 30px;
+            background: var(--color-amarillo-primary); 
+          }
+          
+          nav ul li a {
+            text-decoration: none;
+            color: var(--color-blanco-primary);
+            font-weight: bold;
+            cursor: pointer;
+          }
+            a:hover {
+              color: #a5bdcd;
+            }
 
 
 /* Header responsive */
 @media screen and (max-width: 1100px ){
-  .head-superior{
-      display: none;
-  }
+  .head-superior{ display: none; }
   .header{ top: 0px; position: fixed; z-index: 900;}
 }
 
@@ -190,54 +195,48 @@ header {
   }
 }
 
-
 @media screen and (max-width: 750px ){
-  /*Minimenu responsive*/
+  /* Minimenu responsive */
   .menu-icon {
     display: block;
-    color: var(--color-blanco-primary);
-  }
-
-  nav:hover .menu-list {
-    display: block;
-  }
-
-  nav ul, nav:active ul{
-    display: none;
-    z-index: 1000;
-    position: absolute;
-    background-color: var(--color-rojo-logo);
-    width: 100%;
-    height: 100vh;
-    top: 90px;
-    left: 0;
-    border-top: 1px solid var(--color-blanco-primary)
   }
 
   .menu-list {
     padding: 20px;
   }
-  nav li {
-    text-align: center;
-    width: 100%;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.421);
-    padding: 1.5rem;
-  }
-  nav ul li a{
-    display: table;
-    width: 100%;
-    padding: 1.5rem;
-    height: 50px;
-    text-decoration: none;
-    font-size: medium;
-  }
-  nav ul li a:hover{
-    background-color: rgba(255, 255, 255, 0.3);
+  nav:hover .menu-list {
+    display: block;
   }
 
-  .menu-list.close{
-    right: -100%;
-  }
+    nav ul, nav:active ul{
+      display: none;
+      z-index: 1000;
+      position: absolute;
+      background-color: var(--color-rojo-logo);
+      width: 100%;
+      height: 100vh;
+      top: 90px;
+      left: 0;
+      border-top: 1px solid var(--color-blanco-primary);
+    }
+
+      nav li {
+        text-align: center;
+        width: 100%;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.421);
+        padding: 1.5rem;
+      }
+        nav ul li a{
+          display: table;
+          width: 100%;
+          padding: 1.5rem;
+          height: 50px;
+          text-decoration: none;
+          font-size: medium;
+        }
+          nav ul li a:hover{
+            background-color: rgba(255, 255, 255, 0.3);
+          }
 
 }
 
