--- a/src/css/header.css
+++ b/src/css/header.css
@@ -155,11 +155,10 @@ body.active-menum{ overflow-y: hidden; }
 
         nav ul li .active{
           color: #ffdd40;
+          border-bottom: 1px solid #ffdd40;
+          display: block;
           width: 100%;
           height: 22px;
-          content: "";
-          display: block;
-          border-bottom: 1px solid #ffdd40;
         }
         
           nav ul li #btnSolicitar{
@@ -186,23 +185,24 @@ body.active-menum{ overflow-y: hidden; }
   .header{ top: 0px; position: fixed; z-index: 900;}
 }
 
-@media screen and (max-width: 960px ){
+@media screen and (max-width: 990px ){
   header #logo{
-    margin-left: 15px;
+    margin-left: 90px;
   }
   nav{
-    margin-right: 0px;
+    margin-right: 75px;
   }
 }
 
-@media screen and (max-width: 750px ){
+@media screen and (max-width: 870px ){
   /* Minimenu responsive */
   .menu-icon {
     display: block;
   }
 
   .menu-list {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   nav:hover .menu-list {
     display: block;
@@ -216,28 +216,44 @@ body.active-menum{ overflow-y: hidden; }
       width: 100%;
       height: 100vh;
       top: 90px;
-      left: 0;
+      left: 0px;
       border-top: 1px solid var(--color-blanco-primary);
     }
 
-      nav li {
+      nav ul li .active{
+        border-bottom: none;
+        height: auto;
+      }
+      nav ul li {
         text-align: center;
         width: 100%;
         border-bottom: 2px solid rgba(255, 255, 255, 0.421);
-        padding: 1.5rem;
+        margin-left: 0px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
         nav ul li a{
           display: table;
           width: 100%;
           padding: 1.5rem;
           height: 50px;
-          text-decoration: none;
           font-size: medium;
         }
           nav ul li a:hover{
             background-color: rgba(255, 255, 255, 0.3);
           }
+          
+}
 
+@media screen and (max-width: 780px ){
+  header #logo{ margin-left: 50px; }
+  nav{ margin-right: 35px; }
+}
+
+@media screen and (max-width: 550px ){
+  header #logo{ margin-left: 15px; }
+  nav{ margin-right: 0px; }
 }
 
 @media screen and (max-width: 210px ){
